Make the diagnostic request scalable